make logo as a link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Start header -->
     <header>
       <div class="container">
-        <img class="logo" src="imags/logo.png" alt ="This is the logo">
+        <a href="index.html"><img class="logo" src="imags/logo.png" alt ="This is the logo"></a>
         <div class="links">
           <span class="icon">
             <span></span>
