--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <!-- Render All Elements Normally -->
         <link rel="stylesheet" href="css/normalize.css" />
         <!-- Font Awesome Library -->
-        <link rel="stylesheet" href="css/all.min.css" />
+<!--         <link rel="stylesheet" href="css/all.min.css" /> -->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
